# Personal_Assist

./: .gitignore  acp_demo.ipynb  acp_demo.py  acp_web.py  mcp_server.py  pyproject.toml  resume.json  visited_places.json
acp_demofiles/: acp_demo.py
db/: chroma.sqlite3
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
personal_assistant/: .dockerignore  .gitignore  DOCKER_SETUP.md  Dockerfile  GOOGLE_CLOUD_DEPLOYMENT.md  Makefile  QUICKSTART.md  README.md  RLS_TROUBLESHOOTING.md  SUPABASE_SETUP.md  USER_SPECIFIC_SETUP.md  database_setup.sql  database_setup_user_specific.sql  demo.py  docker-compose.yml  env.example  personal_assistant_design.md  pyproject.toml  requirements.txt  run_streamlit.py  streamlit_ui.py  test_due_date.py  test_supabase.py  test_supabase_fix.py  test_user_data.py
personal_assistant/agents/: health_diet_agent.py  notes_agents.py
personal_assistant/data/: .gitkeep  categories.json  expenses.json  meetings.json
personal_assistant/mcp_tools/: expense_tools.py  health_diet_tools.py  meeting_tools.py  notes_tool.py
personal_assistant/servers/: api_server.py  expense_server.py  meeting_server.py  notes_server.py  orchestrator_server.py
personal_assistant/test/: test_server.ipynb
personal_assistant/utils/: data_manager.py  gemini_config.py  supabase_config.py
